@@ -3,3 +3,4 @@ name = Aggregator
 description = "Aggregates syndicated content (RSS, RDF, and Atom feeds)."
 package = Core - optional
 version = VERSION
+core = 6.x
