@@ -3,3 +3,4 @@ name = Block
 description = Controls the boxes that are displayed around the main content.
 package = Core - required
 version = VERSION
+core = 6.x
