@@ -3,3 +3,4 @@ name = Book
 description = Allows users to collaboratively author a book.
 package = Core - optional
 version = VERSION
+core = 6.x
