@@ -3,3 +3,4 @@ name = Database logging
 description = Logs and records system events to the database.
 package = Core - optional
 version = VERSION
+core = 6.x
