@@ -3,3 +3,4 @@ name = Filter
 description = Handles the filtering of content in preparation for display.
 package = Core - required
 version = VERSION
+core = 6.x
