@@ -5,3 +5,4 @@ dependencies[] = taxonomy
 dependencies[] = comment
 package = Core - optional
 version = VERSION
+core = 6.x
