@@ -3,3 +3,4 @@ name = Help
 description = Manages the display of online help.
 package = Core - optional
 version = VERSION
+core = 6.x
