@@ -3,3 +3,4 @@ name = Locale
 description = Add language handling functionality and enables the translation of the user interface to languages other than English.
 package = Core - optional
 version = VERSION
+core = 6.x
