@@ -3,3 +3,4 @@ name = Menu
 description = Allows administrators to customize the site navigation menu.
 package = Core - optional
 version = VERSION
+core = 6.x
