@@ -3,3 +3,4 @@ name = Path
 description = Allows users to rename URLs.
 package = Core - optional
 version = VERSION
+core = 6.x
