@@ -3,3 +3,4 @@ name = PHP filter
 description = Allows embedded PHP code/snippets to be evaluated.
 package = Core - optional
 version = VERSION
+core = 6.x
