@@ -3,3 +3,4 @@ name = Poll
 description = Allows your site to capture votes on different topics in the form of multiple choice questions.
 package = Core - optional
 version = VERSION
+core = 6.x
