@@ -3,3 +3,4 @@ name = Profile
 description = Supports configurable user profiles.
 package = Core - optional
 version = VERSION
+core = 6.x
