@@ -3,3 +3,4 @@ name = Search
 description = Enables site-wide keyword searching.
 package = Core - optional
 version = VERSION
+core = 6.x
