@@ -3,3 +3,4 @@ name = Statistics
 description = Logs access statistics for your site.
 package = Core - optional
 version = VERSION
+core = 6.x
