@@ -3,3 +3,4 @@ name = Syslog
 description = Logs and records system events to syslog.
 package = Core - optional
 version = VERSION
+core = 6.x
