@@ -445,3 +445,10 @@ thead div.sticky-header {
 html.js .js-hide {
   display: none;
 }
+
+/*
+** Styles for the system modules page (admin/build/modules)
+*/
+#system-modules div.incompatible {
+  font-weight: bold;
+}
