@@ -3,3 +3,4 @@ name = System
 description = Handles general site configuration for administrators.
 package = Core - required
 version = VERSION
+core = 6.x
