@@ -3,3 +3,4 @@ name = Taxonomy
 description = Enables the categorization of content.
 package = Core - optional
 version = VERSION
+core = 6.x
