@@ -3,3 +3,4 @@ name = Throttle
 description = Handles the auto-throttling mechanism, to control site congestion.
 package = Core - optional
 version = VERSION
+core = 6.x
