@@ -3,3 +3,4 @@ name = Tracker
 description = Enables tracking of recent posts for users.
 package = Core - optional
 version = VERSION
+core = 6.x
