@@ -3,3 +3,4 @@ name = Upload
 description = Allows users to upload and attach files to content.
 package = Core - optional
 version = VERSION
+core = 6.x
