@@ -3,3 +3,4 @@ name = User
 description = Manages the user registration and login system.
 package = Core - required
 version = VERSION
+core = 6.x
