@@ -4,4 +4,5 @@ description = Boxy tabled theme in all grays.
 regions[left] = Left sidebar
 regions[right] = Right sidebar
 version = VERSION
+core = 6.x
 base theme = chameleon
