@@ -2,4 +2,5 @@
 name = Minnelli
 description = Tableless, recolorable, multi-column, fixed width theme.
 version = VERSION
+core = 6.x
 base theme = garland
