@@ -8,7 +8,7 @@ Drupal 6.0, xxxx-xx-xx (development version)
    * The watchdog module is now called dblog, and is optional, but enabled by default in the default install profile.
    * Extended the database log module so log messages can be filtered.
    * Added syslog module: useful for monitoring large Drupal installations.
-- Added optional e-mail notifications when user are approved, blocked, or deleted.
+- Added optional e-mail notifications when users are approved, blocked, or deleted.
 - Added versioning support to node terms.
 - Made it easier to theme the forum overview page.
 - Made Drupal work correctly when running behind a reverse proxy like Squid or Pound.
@@ -32,6 +32,7 @@ Drupal 6.0, xxxx-xx-xx (development version)
     * Removed default/settings.php. Instead the installer will create it from default.settings.php.
     * Made it possible to configure your own date formats.
     * Remember anonymous comment posters.
+    * Only allow modules and themes to be enabled that have explicitly been ported to the right core API version.
 - Theme system:
     * Added .info files to themes and made it easier to specify regions and features.
     * Added theme registry: modules can directly provide .tpl.php files for their themes without having to create theme_ functions.
